--- a/src/components/PublisherMgmtSys/AvatorGenerator/AvatarGenerator.css
+++ b/src/components/PublisherMgmtSys/AvatorGenerator/AvatarGenerator.css
@@ -32,6 +32,7 @@
   padding: 30px;
   border-radius: 15px;
   width: 700px;
+
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -73,7 +74,7 @@
 }
 
 button {
-  background-color: rgb(58, 79, 208);
+  background-color: #007bff;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -88,11 +89,11 @@ button:disabled {
 }
 
 button:hover:not(:disabled) {
-  background-color: rgb(58, 79, 208);
+  background-color:#87bbf3;
 }
 
 .submit-button {
-  background-color: rgb(58, 79, 208);
+  background-color:  #007bff;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -114,7 +115,7 @@ button:hover:not(:disabled) {
 
 .close-button {
   margin-top: 10px;
-  background-color: #7236f4;
+  background-color: #007bff;
   color: white;
   border: none;
   padding: 10px;
@@ -123,7 +124,7 @@ button:hover:not(:disabled) {
 }
 
 .close-button:hover {
-  background-color: #7236f4;
+  background-color: #0155ae;
 }
 
 .loading-screen {
