Update styles of sidebar and AI Podcast

--- a/src/components/Layout/mainContentLayout2/MainContentLayout.css
+++ b/src/components/Layout/mainContentLayout2/MainContentLayout.css
@@ -68,7 +68,7 @@
   overflow-x: hidden;
   padding: 20px;
   box-sizing: border-box;
-  border: solid 2px #b7c2fb;
+  border: solid 2px #b8c3f3;
   margin: 20px;
   border-radius: 20px;
 }
