--- a/src/components/AIPodcastSysPublisher/AIAudioBook/AIAudioBook.css
+++ b/src/components/AIPodcastSysPublisher/AIAudioBook/AIAudioBook.css
@@ -7,6 +7,13 @@
 }
 
 .audio-ai-generator {
+  position: relative;
+  height: auto;
+  max-height:800px;
+  overflow-y: auto;
+  margin-top: 20px; 
+
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -149,7 +156,7 @@
 
 .progress {
   height: 100%;
-  background-color: #1db954;
+  background-color: #1db954; /* Spotify-like green */
   width: 0;
   transition: width 0.3s ease;
 }
