--- a/src/components/AIPodcastSysPublisher/AIPodcast/AIPodcast.css
+++ b/src/components/AIPodcastSysPublisher/AIPodcast/AIPodcast.css
@@ -2,6 +2,7 @@
   width: 95%;
   margin: 0 auto;
   text-align: center;
+  padding: 35px;
 }
 
 .input-type-selector {
@@ -13,7 +14,7 @@
 
 .input-type-selector button {
   padding: 10px 20px;
-  border: 2px solid #6e44ff;
+  border: 2px solid #7287f9;
   border-radius: 8px;
   background-color: transparent;
   cursor: pointer;
@@ -35,9 +36,35 @@
   text-align: left;
 }
 
+.form-group-row {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  width: 110%;
+}
+
+.form-column {
+  flex: 1;
+}
+
 .form-group label {
   display: block;
   margin-bottom: 5px;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.form-group select {
+    width: 400px;
+    height: 50px;
+    padding: 10px;
+    border: 1.5px solid #dadee2;
+    border-radius: 4px;
+    background-color: #fff;
+    color: #333;
+    font-size: 16px;
+    font-weight: 300;
+    font-family: Arial, sans-serif;
 }
 
 .form-group input,
@@ -45,7 +72,7 @@
   width: 100%;
   height: 40px;
   padding: 8px;
-  border: 1px solid #ddd;
+  border: 1.5px solid #dadee2;
   border-radius: 4px;
   font-family: 'Roboto', sans-serif; /* Apply Roboto font */
 }
@@ -63,7 +90,7 @@
 
 button[type="submit"] {
   padding: 10px 20px;
-  background-color: #6e44ff;
+  background-color: #7287f9;
   color: white;
   border: none;
   border-radius: 4px;
@@ -77,5 +104,5 @@ button[type="submit"]:disabled {
 }
 
 button[type="submit"]:hover:enabled {
-  background-color: #5a37d2;
+  background-color: #9aa8f9;
 }
