--- a/src/components/Layout/sidebar/Sidebar.css
+++ b/src/components/Layout/sidebar/Sidebar.css
@@ -8,7 +8,7 @@
 }
 
 .sidebar-title {
-  color: #6e44ff;
+  color: #7287f9;
   background-color: white;
   height: 70px;
   line-height: 70px;
@@ -21,7 +21,7 @@
 
 .file-frame {
   padding: 15px;
-  border: 2px dashed #7288fa;
+  border: 2px dashed #7988e3;
   border-radius: 10px;
   background-color: white;
   min-width: 260px;
@@ -40,7 +40,7 @@
 .custom-file-upload {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #6e44ff;
+  background-color: #7287f9;
   border: #a4a2a2 solid 1px;
   color: white;
   border-radius: 5px;
@@ -50,7 +50,7 @@
 }
 
 .custom-file-upload:hover {
-  background-color: #6e44ff;
+  background-color: #8a9af6;
 }
 
 .file-upload {
@@ -60,6 +60,10 @@
 .file-count {
   font-size: 0.9rem;
   color: #555;
+}
+
+.file-container {
+  width: 100%;
 }
 
 .notification {
