--- a/src/components/AIPodcastSysPublisher/ProductDetails/ProductDetails.css
+++ b/src/components/AIPodcastSysPublisher/ProductDetails/ProductDetails.css
@@ -1,10 +1,19 @@
-.image-upload-container{
-  border: 1px solid #ccc;
+.product-details-container{
+  max-width: 930px;
+  width: 95%;
+  margin: 0 auto;
+  padding: 05px;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.product-details-container .image-upload-container{
   padding: 20px 10px 0px 10px;
   border-radius: 4px;
+  border: 1.5px solid #dadee2;
 }
 
-.image-upload {
+.product-details-container .image-upload {
   display: inline-block;
   padding: 5px 10px;
   background-color: #4caf50;
@@ -16,7 +25,7 @@
   transition: background-color 0.3s ease;
 }
 
-.custom-file-upload-small {
+.product-details-container .custom-file-upload-small {
   display: inline-block;
   padding: 5px 10px;
   background-color: #4caf50;
@@ -28,26 +37,27 @@
   transition: background-color 0.3s ease;
 }
 
-.custom-file-upload-small:hover {
+.product-details-container .custom-file-upload-small:hover {
   background-color: #45a049;
 }
 
-.image-upload {
+.product-details-container .image-upload {
   display: none;
 }
 
-.upload-text{
-  font-size: 20px;
+.product-details-container .upload-text{
+  font-weight: 500;
+  font-size: 16px;
 }
 
-.audio-upload-container{
-  border: 1px solid #ccc;
-  padding: 10px 10px 0px 10px;
+.product-details-container .audio-upload-container{
+  padding: 20px 10px 10px 10px;
   border-radius: 4px;
   margin-top: 10px;
+  border: 1.5px solid #dadee2;
 }
 
-.aidio-upload {
+.product-details-container .aidio-upload {
   display: inline-block;
   padding: 5px 10px;
   background-color: #4caf50;
@@ -60,33 +70,33 @@
   margin-bottom: 10px;
 }
 
-.audio-upload {
+.product-details-container .audio-upload {
   display: none; 
 }
 
 
 
 /* Styles for uploaded image previews */
-.picture-previews {
+.product-details-container .picture-previews {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  margin-top: 10px;
 }
 
-.picture-preview-container {
+.product-details-container .picture-preview-container {
   position: relative;
-  width: 200px;
-  height: 200px;
-  /*border: 2px solid rgb(175, 174, 174);*/
+  width: 170px;
+  height: 170px;
+  border: none;
   border-radius: 8px;
+  padding: 10px;
+  background-color: transparent;
 }
 
-.picture-preview-container:hover .picture-preview {
+.product-details-container .picture-preview-container:hover .picture-preview {
   filter: brightness(0.5);
 }
 
-.picture-preview-container:hover::after {
+.product-details-container .picture-preview-container:hover::after {
   content: "Preview";
   position: absolute;
   color: white;
@@ -95,21 +105,20 @@
   left: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
- 
+  
 }
 
-.picture-preview {
+.product-details-container .picture-preview {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s ease;
-  border: #ccc solid 1px;
 }
 
 
-.picture-preview:hover::after {
+.product-details-container .picture-preview:hover::after {
   content: "Preview";
   position: absolute;
   top: 50%;
@@ -120,30 +129,24 @@
   font-size: 14px;
 }
 
-.remove-image {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  background-color:rgb(255, 53, 53);
-  color: white;
-  border: none;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  font-size: 14px;
-  cursor: pointer;
+.product-details-container .remove-image {
+  top: 0px;
+  right: 0px;
+  min-width: 30px;
+  min-height: 20px;
+  font-weight: bold;
 }
 
-.remove-image:hover{
+.product-details-container .remove-image:hover{
   filter:brightness(0.8);
 }
 
-.remove-image:active{
+.product-details-container .remove-image:active{
   background-color: pink;
   filter:brightness(1);
 }
 
-.expanded-view {
+.product-details-container .expanded-view {
   position: fixed;
   top: 0;
   left: 0;
@@ -156,12 +159,12 @@
   z-index: 1000;
 }
 
-.expanded-image {
+.product-details-container .expanded-image {
   max-width: 80%;
   max-height: 80%;
 }
 
-.close-expanded, .remove-expanded, .prev-image, .next-image {
+.product-details-container .close-expanded, .remove-expanded, .prev-image, .next-image {
   position: absolute;
   background: transparent;
   color: white;
@@ -170,18 +173,20 @@
   cursor: pointer;
 }
 
-.close-expanded {
+.product-details-container .close-expanded {
   top: 20px;
   right: 20px;
-  font-size: 40px;
+  font-size: 50px;
+  width: 70px;
 }
 
-.close-expanded:active{
+.product-details-container .close-expanded:active{
   background-color: rgb(186, 191, 196,0.5);
   border-radius: 5px;
 }
 
-.remove-expanded {
+.product-details-container .remove-expanded {
+  max-width: 150px;
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
@@ -191,37 +196,38 @@
   border-radius: 5px;
 }
 
-.remove-expanded:hover{
+.product-details-container .remove-expanded:hover{
   opacity: 0.9;
 }
 
-.remove-expanded:active{
+.product-details-container .remove-expanded:active{
   background-color: #d73b3b;
 }
 
-.prev-image, .next-image {
+.product-details-container .prev-image, .next-image {
   top: 50%;
   transform: translateY(-50%);
+  width: 50px;
 }
 
-.prev-image {
+.product-details-container .prev-image {
   left: 50px;
   font-weight: 400;
   font-size: 40px;
 }
 
-.next-image {
+.product-details-container .next-image {
   right: 50px;
   font-weight: 400;
   font-size: 40px;
 }
 
-.prev-image:active{
+.product-details-container .prev-image:active{
   background-color: rgb(186, 191, 196,0.5);
   border-radius: 5px;
 }
 
-.next-image:active{
+.product-details-container .next-image:active{
   background-color: rgb(186, 191, 196,0.5);
   border-radius: 5px;
 }
