--- a/src/components/Layout/navigation/Navigation.css
+++ b/src/components/Layout/navigation/Navigation.css
@@ -2,91 +2,118 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #7287f9;
-  color: white;
+  background-color: white;
+  color: black;
   padding: 10px 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  position: relative;
 }
 
-.nav-brand {
-  font-size: 1.2em;
-  font-weight: bold;
+.nav-brand img {
+  height: 40px;
 }
 
 .nav-links {
-  position: relative; /* Necessary for dropdown positioning */
+  display: flex;
+  gap: 20px;
+  margin-left: auto;
+}
+
+.login a{
+  color: black;
+  text-decoration: none;
+  font-size: 1em;
+  padding: 10px 10px;
+  font-weight: bold;
+  border: solid 1px grey;
+  margin-left: 25px;
+  margin-right: 15px;
+  border-radius: 5px;
+}
+
+.login a:hover {
+  background-color: #f2f2f2;
 }
 
 .nav-links a {
-  color: white;
+  color: black;
   text-decoration: none;
-  margin-left: 20px;
   font-size: 1em;
+  padding: 10px 15px;
   transition: color 0.3s, background-color 0.3s;
-  padding: 15px 20px; /* Same padding for base and hover state */
-  border-radius: 5px; /* Optional: Rounded corners */
-  line-height: 1.5; /* Consistent line height */
+  font-weight: normal;
 }
 
 .nav-links a:hover {
-  color: #004080; /* Darker text color */
-  background-color: rgba(206, 208, 216, 0.2); /* Change background color */
+  color: #7287f9;
+  background-color: rgba(205, 205, 205, 0.2);
 }
+
+.nav-links a.selected {
+  font-weight: 600;
+  color: #7287f9;
+}
+
 
 .user-info {
   display: flex;
   align-items: center;
   position: relative;
-}
-
-.user-info .welcome {
-  margin-right: 15px;
-  color: white;
+  margin-left: 30px;
+  margin-right: 20px;
 }
 
 .user-info .avatar {
-  width: 40px;
-  height: 40px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
-  transition: background-color 0.3s, color 0.3s;
-  margin-left: 20px;
+  transition: background-color 0.3s, transform 0.3s;
+  box-shadow: 0 0  15px rgba(0, 0, 0, 0.3);
 }
 
 .user-info .avatar:hover {
   background-color: #6db3d4;
+  transform: scale(1.1);
   cursor: pointer;
 }
 
-/* Dropdown styling */
+.user-info .welcome, .user-info .login-prompt {
+  margin-left: 13px;
+  color: black;
+  font-size: 1em;
+  font-weight: 550;
+}
+
 .dropdown {
-  display: none; /* Initially hide the dropdown */
+  display: none;
   position: absolute;
-  top: 60px; /* Adjust to ensure dropdown doesn't overlap */
-  right: 0;
-  background-color: #f1f1f1;
+  top: 40px;
+  right: 0px;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  opacity: 0; /* Start with opacity 0 for fade effect */
-  transition: opacity 0.3s ease, visibility 0.3s; /* Smooth transition for dropdown */
-  visibility: hidden; /* Use visibility to prevent mouse events */
+  z-index: 9999;
+  opacity: 0;
+  transition: opacity 0.3s ease, visibility 0.3s;
+  visibility: hidden;
+  padding-right: 5px;
+  border-radius: 5px;
+  background-color: #ffffff;
 }
 
 .user-info:hover .dropdown,
 .user-info .dropdown:hover {
-  display: block; /* Show the dropdown */
-  opacity: 1; /* Fade in */
-  visibility: visible; /* Allow mouse events */
+  display: block;
+  opacity: 1;
+  visibility: visible;
 }
 
 .dropdown a {
-  color: #7287f9;
+  color: black;
   padding: 10px;
   text-decoration: none;
   display: block;
   transition: background-color 0.3s, color 0.3s;
+  background-color: #ffffff;
 }
 
 .dropdown a:hover {
-  background-color: #ffffff;
-  color: #004080;
+  color: #7287f9;
 }
