--- a/src/components/Layout/sidebar/Sidebar.css
+++ b/src/components/Layout/sidebar/Sidebar.css
@@ -1,4 +1,5 @@
 .sidebar {
+  margin-top: 5px;
   width: 100%;
   height: 100vh;
   overflow-y: hidden;
@@ -197,12 +198,13 @@ a:hover {
 }
 
 a {
-  color: #6e44ff;
+  color: #7287f9;
   text-decoration: none;
 }
 
 a:hover {
   text-decoration: underline;
+  color: #6e44ff;
 }
 
 .delete-button {
