--- a/src/components/AIPodcastSysPublisher/ProductDetails/ProductDetails.css
+++ b/src/components/AIPodcastSysPublisher/ProductDetails/ProductDetails.css
@@ -28,17 +28,22 @@
 .product-details-container .custom-file-upload-small {
   display: inline-block;
   padding: 5px 10px;
-  background-color: #4caf50;
-  border: #a4a2a2 solid 1px;
-  color: white;
-  border-radius: 5px;
-  font-size: 1rem;
+  color: #7287f9;
+  font-size: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  border-radius: 12px;
+  background-color: white;
+  font-weight: 600;
+  width: auto;
+  border: none;
+  margin-left: 5px;
+  border: solid 1.5px #c8d0ff;
+
 }
 
 .product-details-container .custom-file-upload-small:hover {
-  background-color: #45a049;
+  background-color: #f1f4ff;
 }
 
 .product-details-container .image-upload {
@@ -57,13 +62,14 @@
   border: 1.5px solid #dadee2;
 }
 
-.product-details-container .aidio-upload {
+.product-details-container .audio-upload {
   display: inline-block;
   padding: 5px 10px;
-  background-color: #4caf50;
-  border: #a4a2a2 solid 1px;
+  border-radius: 15px;
+  background-color: #7287f9;
+  font-weight: 600;
+  width: 350px;
   color: white;
-  border-radius: 5px;
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -230,4 +236,22 @@
 .product-details-container .next-image:active{
   background-color: rgb(186, 191, 196,0.5);
   border-radius: 5px;
+}
+
+.product-details-container .save-container{
+  display: flex;
+  justify-content: center;
+  height: 100%;
+}
+
+.product-details-container .action-button{
+  border-radius: 15px;
+  background-color: #7287f9;
+  font-weight: 600;
+  width: 350px;
+}
+
+.product-details-container .action-button:hover{
+  background-color: #7287f9;
+  opacity: 70%;
 }
