--- a/src/components/Layout/footer/Footer.css
+++ b/src/components/Layout/footer/Footer.css
@@ -1,17 +1,101 @@
-/* Footer */
-.main-footer {
-  background-color: #f0f0f0;
-  padding: 20px;
-  text-align: center;
-  width: 100%; /* Ensure full width */
-  position: relative;
-  left: 0;
-  right: 0;
+/* Footer Container */
+.footer {
+  width: 1440px;
+}
+
+/* Top Half */
+.footer-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #7879F1;
+  height: 574px;
+  padding: 0 80px;
+  width: 1440px;
+}
+
+/* Logo */
+.footer-logo {
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-logo-image {
+  min-width: 424px;
+  min-height: 221px;
+  max-width: 424px;
+  max-height: 221px;
+  margin-right: 0px;
+  object-fit: contain;
+  margin-left: -30px;
+}
+
+
+/* Columns */
+
+.footer-heading {
+  font-family: 'Inter', sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #FFFFFF;
+  margin-bottom: 30px;
+}
+
+.footer-links {
+  list-style: none;
+  padding: 0;
   margin: 0;
 }
 
-.main-footer p {
-  color: #555;
-  font-size: 1rem;
+.footer-links li {
+  margin-bottom: 8px;
+}
+
+.footer-links a {
+  display: inline-block;
+  width: 140px;
+  text-align: left;
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  text-decoration: none;
+  color: #FFFFFF;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  transition: all 0.4s;
+  padding: 5px;
+  margin-left: -5px;
+  border-radius: 5px;
+}
+
+.footer-links a:hover {
+  background-color: #9a9af9;
+}
+
+/* Bottom Half */
+.footer-bottom {
+  background-color: #A5A6F6;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-bottom p {
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #FFFFFF;
   margin: 0;
+}
+
+.footer-right{
+  display: flex;
+  flex-direction: row;
+  gap: 140px;
+  margin-right: 100px;
+
 }
